<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsSender</string>
    <string name="action_settings">Settings</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Test">Test</string>
    <string name="IPAddress">IPAddress</string>
    <string name="IP">IP</string>
    <item name="app_notification_id" type="id"></item>
</resources>
