<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lm.smssender.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/labelIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/labelIPAddress"
        android:layout_alignBottom="@+id/labelIPAddress"
        android:layout_alignLeft="@+id/buttonStart"
        android:text="@string/IP"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:layout_toRightOf="@+id/buttonTest"
        android:text="@string/Stop" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonStop"
        android:layout_toLeftOf="@+id/buttonTest"
        android:text="@string/Start" />

    <TextView
        android:id="@+id/labelIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStart"
        android:layout_marginBottom="26dp"
        android:layout_toRightOf="@+id/buttonStart"
        android:text="@string/IPAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStart"
        android:layout_below="@+id/buttonStop"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:text=""
        android:inputType="phone" >
			
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPhoneNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/Test" />

    <TextView
        android:id="@+id/logView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPhoneNumber"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonStop"
        android:layout_below="@+id/buttonTest"
        android:scrollHorizontally="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:text="TextView" />

     </RelativeLayout>